# D-EcoImpact

./: .gitignore  404.html  Dockerfile  LICENSE.md  README.md  batch_run_examples.bat  build-image.sh  input_file.yaml  main.py  mkdocs.yml  pyinstaller.py  pyproject.toml  pytest.ini  template_input.yaml  versions.json
.github/workflows/: bump_poetry.yml  bump_version.yml  docker-image.yml  docker_image.yml  main.yml  manual.yml  mkdocs_documentation.yml  release.yml  setup_environment.yml  version_upgrade.yml
0.1/: sitemap.xml
0.1.0/: 404.html  index.html  objects.inv
0.1.0/development/: index.html
0.1.0/installation/: index.html
0.1.0/print_page/: index.html
0.1.0/tutorials/: index.html
0.1.1/home/: index.html
0.1.2/home/: index.html
0.1.3/: 404.html  index.html  objects.inv
0.1.3/development/: index.html
0.1.3/home/: index.html
0.1.3/installation/: index.html
0.1.3/print_page/: index.html
0.1.3/search/: search_index.json
0.1.3/tutorials/: index.html
0.2.0/: 404.html  index.html
0.2.0/development/: index.html
0.2.0/installation/: index.html
0.2.0/search/: search_index.json
0.3.0/home/: index.html
0.3.0/manual/: index.html
0.3.0/print_page/: index.html
0.4.0/: 404.html  index.html
0.4.0/home/: index.html
0.4.0/installation/: index.html
0.4.0/manual/: index.html
0.4.0/print_page/: index.html
0.4.0/search/: search_index.json
0.5.0/development/: index.html
0.5.0/search/: search_index.json
0.6.0/: 404.html  index.html
0.6.0/development/: index.html
0.6.0/home/: index.html
0.6.0/installation/: index.html
0.6.0/manual/: index.html
0.6.0/print_page/: index.html
0.6.0/search/: search_index.json
0.7.0/: 404.html  index.html  objects.inv
0.7.0/development/: index.html
0.7.0/home/: index.html
0.7.0/installation/: index.html
0.7.0/manual/: index.html
0.7.0/print_page/: index.html
0.7.0/search/: search_index.json
3.0.0/: 404.html
3.0.0/development/: index.html
3.0.0/installation/: index.html
3.0.0/manual/: index.html
3.1.0/: objects.inv
3.2.0/home/: index.html
3.2.0/print_page/: index.html
decoimpact/: pyinstaller.py
decoimpact/business/: application.py  dataset_utils.py
decoimpact/crosscutting/: base_logger.py  delft3d_specific_data.py  i_logger.py  logger.py  logger_factory.py  logging_logger.py
decoimpact/data/: dictionary_utils.py
deltares_testbench_configs/: d-ecoimpact_cases.xml  d-ecoimpact_win64.xml
develop/: index.html  sitemap.xml
develop/development/: index.html
develop/search/: search_index.json
develop/tutorials/: index.html
docs/: Installation.md  api.md  development.md  home.md  index.md  installation.md  manual.md  tutorials.md
docs/Tutorials/: Introduction.md
docs/api/: application_overview.md  architecture.md
docs/examples/: maas.md  volkerak.md
docs/manual/: input.md  visualization.md
docs/tutorials/: input.md  visualization.md
examples/: README.txt  RESTCOAST_python_test_of_functions - RichardMarijnissen.py  RESTCOAST_python_test_of_functions - RichardMarijnissen2.py  RESTCOAST_python_test_of_functions.py  python_test_of_functions.py  test_RESTCOAST.yaml
examples/input_yaml_files/: README.txt  test1_default_independent_rules.yaml
examples/preprocessing/: main.py
installation/: index.html
latest/development/: index.html
latest/home/: index.html
latest/installation/: index.html
latest/manual/: index.html
latest/overrides/: main.html
latest/print_page/: index.html
latest/tutorials/: index.html
print_page/: index.html
scripts/: create_nc.py  partitioning.ipynb  test_extreme_filter.ipynb  test_peak_function.py
tests/: test_main.py  testing_utils.py
tests/business/: test_application.py
tests/crosscutting/: test_logger_factory.py  test_logging_logger.py
tests/data/: test_dictionary_utils.py
tests_acceptance/: test_main.py
tests_acceptance/input_nc_files/: test_depth_average_rule.nc  test_depth_average_sigmalayer_rule.nc
tests_acceptance/input_yaml_files/: 01_default_independent_rules.yaml  01b_multiply_rule_time_dependent.yaml  01c_multiply_rule_time_period_selection.yaml  01d_multiply_rule_time_period_selection_with_only_one_variable_saved.yaml  01e_multiply_rule_time_period_selection_with_only_two_variables_saved.yaml  02_variable_mapping.yaml  03_layer_filter_layer22.yaml  03b_layer_filter_layer0.yaml  03c_layer_filter_layer1.yaml  04_depending_rules_multiply.yaml  04b_depending_rules_multiply.yaml  05_depending_rules_multiply_layerfilter.yaml  06_combine_results_add.yaml  06b_combine_results_subtract.yaml  06c_combine_results_min.yaml  06d_combine_results_max.yaml  06e_combine_results_multiply.yaml  06f_combine_results_with_nans.yaml  07_time_aggregation_year.yaml  07b_time_aggregation_month.yaml  07c_time_aggregation_standarddeviation_percentiles.yaml  08_stepwise_classification_waterlevel.yaml  08b_stepwise_classification_salinity_limits.yaml  09_response_curve_waterlevel.yaml  (+72 more)
(+452 files in other folders)
