[tool.poetry]
name = "decoimpact"
version = "0.1.0"
description = "A Python based kernel to perform spatial (environmental) impact assessment. Based on knowledge rules applied to model output and/or measurements."
authors = ["Deltares"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12" # max 3.11 because of scipy
xarray = "^2023.1.0"
ruamel-yaml = "^0.17.21"
scipy = "^1.10.0"
netcdf4 = "^1.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pylint = "^2.15.10"
mock = "^5.0.1"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
markers = [
    "data_access: tests using the file system",
]
testpaths = ["tests/**/test_*.py"]
junit_logging = "all"
log_cli = "True"
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)-8s %(message)s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
