[tool.poetry]
name = "decoimpact"
version = "3.0.13"
description = "A Python based kernel to perform spatial (environmental) impact assessment. Based on knowledge rules applied to model output and/or measurements."
authors = ["Deltares"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12" # max 3.11 because of scipy
numpy = "^1.24.1"
xarray = "^2023.1.0"
scipy = "^1.10.0"
netcdf4 = "^1.6.2"
pathlib = "^1.0.1"
wrapt = "1.15"
mkdocs-material = "^9.1.5"
mike = "^1.1.2"
mkdocstrings = "^0.21.2"
mkdocs-print-site-plugin = "^2.3.4"
mkdocstrings-python = "^0.9.0"
mkdocs-include-markdown-plugin = "^4.0.4"
restrictedpython = "^6.0"
pyyaml-include = "^1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pylint = "^2.15.10"
mock = "^5.0.1"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
markers = [
    "data_access: tests using the file system",
]
testpaths = ["tests/**/test_*.py","tests_acceptance/**/test_*.py"]
pythonpath = ["."]
junit_logging = "all"
log_cli = "True"
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)-8s %(message)s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
