[tool.poetry]
name = "decoimpact"
version = "0.3.14"
description = "A Python based kernel to perform spatial (environmental) impact assessment. Based on knowledge rules applied to model output and/or measurements."
authors = ["Deltares"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.13"    # max 3.13 because of pyinstaller
numpy = "^1.26"
xarray = "^2024.6.0"
scipy = "^1.13.0"
netcdf4 = "^1.7"
restrictedpython = "^7.0"
pyyaml-include = "^2.1"
importlib = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^24.4.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pylint = "^2.15.10"
mock = "^5.0.1"
mkdocs-material = "^9.5"
mike = "^1.1.2"
mkdocstrings = "^0.21.2"
mkdocs-print-site-plugin = "^2.3.4"
mkdocs-include-markdown-plugin = "^6.0"
mkdocstrings-python-legacy = "^0.2.3"
pyinstaller = "^6.8.0"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
markers = ["data_access: tests using the file system"]
testpaths = ["tests/**/test_*.py", "tests_acceptance/**/test_*.py"]
pythonpath = ["."]
junit_logging = "all"
log_cli = "True"
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)-8s %(message)s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "pyinstaller:install"
